Immutable Collection Creation Can Be Collection Factory